force-app/main/default/objects/Case_Notification_Preference__c/Case_Notification_Preference__c.object-meta.xml
<CustomObject>
    <description>This object contains preferences for case updates specific to Accounts</description>
    <label>Case Notification Preference</label>
    <nameField>
        <label>Case Notification Preference Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Notification Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>