force-app/main/default/objects/Case_Notification_Preference__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account name related to the case</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Case Notification Preferences</relationshipLabel>
    <relationshipName>Case_Notification_Preferences</relationshipName>
    <type>Lookup</type>
</CustomField>