force-app/main/default/objects/Case_Notification_Preference__c/fields/All_case_creation__c.field-meta.xml
<CustomField>
    <fullName>All_case_creation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this field if notifications for all case creations under an account should be sent</description>
    <inlineHelpText>Check this field if notifications for all case creations under an account should be sent</inlineHelpText>
    <label>All case creation?</label>
    <type>Checkbox</type>
</CustomField>