force-app/main/default/objects/Case_Notification_Preference__c/fields/All_case_creation_Slack_Channel__c.field-meta.xml
<CustomField>
    <fullName>All_case_creation_Slack_Channel__c</fullName>
    <label>All case creation Slack Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>