force-app/main/default/objects/Case_Notification_Preference__c/fields/All_case_creation_Template__c.field-meta.xml
<CustomField>
    <fullName>All_case_creation_Template__c</fullName>
    <description>Provide DeveloperName of the email template</description>
    <inlineHelpText>Provide DeveloperName of the email template</inlineHelpText>
    <label>All case creation Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>