force-app/main/default/objects/Case_Notification_Preference__c/fields/Case_CT_Temperature_update__c.field-meta.xml
<CustomField>
    <fullName>Case_CT_Temperature_update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if notifications for CT temperature updates on case under account should be sent</description>
    <inlineHelpText>Check if notifications for CT temperature updates on case under account should be sent</inlineHelpText>
    <label>Case CT Temperature update?</label>
    <type>Checkbox</type>
</CustomField>