force-app/main/default/objects/Case_Notification_Preference__c/fields/Case_CT_Temperature_update_Slack_Channel__c.field-meta.xml
<CustomField>
    <fullName>Case_CT_Temperature_update_Slack_Channel__c</fullName>
    <label>Case CT Temperature update Slack Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>