force-app/main/default/objects/Case_Notification_Preference__c/fields/Case_CT_Temperature_update_Template__c.field-meta.xml
<CustomField>
    <fullName>Case_CT_Temperature_update_Template__c</fullName>
    <description>Provide DeveloperName of the email template</description>
    <inlineHelpText>Provide DeveloperName of the email template</inlineHelpText>
    <label>Case CT Temperature update Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>