force-app/main/default/objects/Case_Notification_Preference__c/fields/Case_escalation__c.field-meta.xml
<CustomField>
    <fullName>Case_escalation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if notifications for case escalations under an account should be sent</description>
    <inlineHelpText>Check if notifications for case escalations under an account should be sent</inlineHelpText>
    <label>Case escalation?</label>
    <type>Checkbox</type>
</CustomField>