force-app/main/default/objects/Case_Notification_Preference__c/fields/Case_Priority_Updates__c.field-meta.xml
<CustomField>
    <fullName>Case_Priority_Updates__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if notifications for all case priority updates under an account should be sent</description>
    <inlineHelpText>Check if notifications for all case priority updates under an account should be sent</inlineHelpText>
    <label>Case Priority Updates?</label>
    <type>Checkbox</type>
</CustomField>