force-app/main/default/objects/Case_Notification_Preference__c/fields/Case_Priority_Updates_Slack_Channel__c.field-meta.xml
<CustomField>
    <fullName>Case_Priority_Updates_Slack_Channel__c</fullName>
    <label>Case Priority Updates Slack Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>