force-app/main/default/objects/Case_Notification_Preference__c/validationRules/Account_Or_Contact_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Or_Contact_Required</fullName>
    <active>true</active>
    <description>Account or contact needs to be filled in</description>
    <errorConditionFormula>AND(
ISBLANK(Account__c),
ISBLANK(Contact__c)
)</errorConditionFormula>
    <errorMessage>Please fill in Account or Contact</errorMessage>
</ValidationRule>