force-app/main/default/objects/Case_Notification_Preference__c/validationRules/Only_One_Can_Be_Filled_In.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_One_Can_Be_Filled_In</fullName>
    <active>true</active>
    <description>Either Account or Contact can be filled in</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(Account__c)),
NOT(ISBLANK(Contact__c))
)</errorConditionFormula>
    <errorMessage>Either Account or Contact can be filled in</errorMessage>
</ValidationRule>