force-app/main/default/objects/Case_Notification_Preference__c/validationRules/SlackChannel_Required_If_Updates_Checked.validationRule-meta.xml
<ValidationRule>
    <fullName>SlackChannel_Required_If_Updates_Checked</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND(
All_case_creation__c ,
ISBLANK(All_case_creation_Slack_Channel__c)
),
AND(
Case_CT_Temperature_update__c ,
ISBLANK(Case_CT_Temperature_update_Slack_Channel__c)
),
AND(
Case_escalation__c ,
ISBLANK(Case_escalation_Slack_Channel__c)
),
AND(
Case_Priority_Updates__c ,
ISBLANK(Case_Priority_Updates_Slack_Channel__c)
)
)</errorConditionFormula>
    <errorMessage>Please provide corresponding Slack channel email address to receive notifications</errorMessage>
</ValidationRule>