force-app/main/default/objects/Case_Notification_Preference__c/validationRules/Template_Required_If_Updates_Checked.validationRule-meta.xml
<ValidationRule>
    <fullName>Template_Required_If_Updates_Checked</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
AND(
 All_case_creation__c ,
 ISBLANK(All_case_creation_Template__c)
),
AND(
 Case_CT_Temperature_update__c  ,
 ISBLANK(Case_CT_Temperature_update_Template__c )
),
AND(
 Case_escalation__c  ,
 ISBLANK(Case_escalation_Template__c )
),
AND(
 Case_Priority_Updates__c   ,
 ISBLANK(Case_Priority_Updates_Template__c )
)
)</errorConditionFormula>
    <errorMessage>Please provide corresponding Template name</errorMessage>
</ValidationRule>