force-app/main/default/objects/Case_Notification_Preference__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>All_case_creation__c</columns>
    <columns>All_case_creation_Slack_Channel__c</columns>
    <columns>Case_CT_Temperature_update__c</columns>
    <columns>Case_CT_Temperature_update_Slack_Channel__c</columns>
    <columns>Case_escalation__c</columns>
    <columns>Case_escalation_Slack_Channel__c</columns>
    <columns>Case_Priority_Updates__c</columns>
    <columns>Case_Priority_Updates_Slack_Channel__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>